# rucio-sense-dmm

./: .gitignore  Dockerfile  README.md  dmm.cfg.sample  networkx.ipynb  pyproject.toml
dmm/daemons/: core.py  fts.py  rucio.py  sense.py  sites.py
dmm/db/: session.py
dmm/utils/: fts.py
docker/: docker-entrypoint.sh
etc/: debug.sh  deploy.yaml  mksecrets.sh  rucio.patch
sim/: UnitTests.py  decision.ipynb  find_least_waste(version_5).ipynb  find_least_waste(version_8).ipynb  find_least_waste(version_9).ipynb  find_least_waste.py  find_next_slot.ipynb  find_next_slot.py  least_waste.py  prio_first.py  warehouse.ipynb
src/dmm/: __init__.py  dmm.py
src/dmm/api/: frontend.py
src/dmm/api/static/: styles.css
src/dmm/api/templates/: details.html  sites.html
src/dmm/core/: config.py  monit.py
src/dmm/daemons/: base.py  core.py  fts.py  rucio.py  sense.py  sites.py
src/dmm/daemons/core/: allocator.py  decider.py  monit.py  sites.py
src/dmm/daemons/fts/: modifier.py
src/dmm/daemons/rucio/: finisher.py  initializer.py  modifier.py
src/dmm/daemons/sense/: canceller.py  deleter.py  handler.py  modifier.py  provisioner.py  stager.py  status_handler.py  status_updater.py
src/dmm/db/: __init__.py  base.py  endpoint.py  mesh.py  request.py  session.py  site.py
src/dmm/frontend/: frontend.py
src/dmm/frontend/templates/: details.html  index.html  sites.html
src/dmm/main/: dmm.py
src/dmm/models/: endpoint.py  mesh.py  request.py  site.py
src/dmm/utils/: db.py  fts.py  monit.py  sense.py
tests/: fts.py  rucio.py
