[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmm"
version = "0.0.1"
authors = [
  { name="Aashay Arora", email="aaarora@ucsd.edu" },
]
dependencies = [
    "sense-o-api",
    "psycopg2-binary",
    "networkx",
    "rucio-clients",
    "fastapi",
    "jinja2",
    "sqlmodel",
    "uvicorn",
    "scipy"
]
description = "Data Movement Manager for Rucio SENSE interoperatio prototype"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
dmm = "dmm.dmm:main"

[tool.setuptools.package-data]
dmm = ["api/templates/*.html", "api/static/*"]

[project.urls]
Homepage = "https://github.com/aashayarora/rucio-sense-dmm"
Issues = "https://github.com/aashayarora/rucio-sense-dmm/issues"
